--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,3 @@
-#main {
-    max-width: 768px;
-}
-
 #main > .post + .post {
     margin-top: 1rem;
 }
@@ -11,19 +7,19 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: .5rem;
-    text-align: justify;
 }
 
 #main > .post > h2 > time {
-    color: gray;
-    display: inline-block;
     font-size: 1rem;
     font-weight: normal;
-    margin-left: 1rem;
-    min-width: 5rem;
 }
 
-#main > .post > div {
-    margin-left: 2rem;
+#main > .post > .content {
+    padding-top: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+    #main > .post > div {
+        margin-left: 2rem;
+    }
 }
