--- a/static/css/list.css
+++ b/static/css/list.css
@@ -1,12 +1,6 @@
-#main {
-    max-width: 768px;
-}
-
 #main > .post-group > ul {
-    border-left: gray solid 1px;
     list-style-type: none;
-    margin-left: 1rem;
-    padding: .5rem 0 .5rem 2rem;
+    padding-left: 2rem;
 }
 
 #main > .post-group > ul > li {
@@ -14,12 +8,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    line-height: 2;
+    line-height: 1.6;
+    padding: .8rem 0;
 }
 
 #main > .post-group > ul > li > time {
-    color: gray;
-    margin-left: 1rem;
-    min-width: 5rem;
     text-align: right;
+}
+
+@media screen and (min-width: 768px) {
+    #main > .post-group > ul {
+        border-left: gray solid 1px;
+        margin-left: 1rem;
+    }
 }
